--- a/README
+++ b/README
@@ -1,1 +1,5 @@
-This file was created by JetBrains WebStorm 4.0.3 for binding GitHub repository
+/**
+*This is a simple example of node.js
+*1.chat
+*2.mongodb
+**/
