change chat  to fluid

--- a/README
+++ b/README
@@ -3,3 +3,18 @@
 *1.chat
 *2.mongodb
 **/
+
+
+
+Task:
+1. change chat css to fluid
+2. add only login user can chat
+
+3. only login user can post blog
+4. refactor post fields change post to content
+
+5. metero
+
+6. register user can redirect to original page where he comes
+
+7. form change to add legend
