--- a/README
+++ b/README
@@ -15,6 +15,6 @@ Task:
 
 5. metero  investigate  -- done
 
-6. register user can redirect to original page where he comes
+6. register user can redirect to original page where he comes -- doing
 
 7. form change to add legend --done
