--- a/README
+++ b/README
@@ -1,20 +1,24 @@
 /**
 *This is a simple example of node.js
-*1.chat
-*2.mongodb
+*Author Soar
+*All rights reserved
+*
+* v0.1.1
 **/
 
 
 
 Task:
 1. change chat css to responsive -- done
-2. add only login user can chat
+2. add only login user can chat --
 
 3. only login user can post blog -- done
-4. refactor post fields change post to content
+4. refactor post fields change post to content -- done
 
 5. metero  investigate  -- done
 
-6. register user can redirect to original page where he comes -- doing
+6. register user can redirect to original page where he comes -- consider
 
 7. form change to add legend --done
+
+8. chat list and private chat ----------
